--- a/Arwas_n_waṭṭan_n_Kuṛunavirus_2019-20.mw
+++ b/Arwas_n_waṭṭan_n_Kuṛunavirus_2019-20.mw
@@ -139,7 +139,31 @@ Deg wass n [[31 dujamber]] [[2019]] tamurt n [[Ccinwa]] telɣet [[tuddsa tamadla
 | tansa = www.who.int
 | tutlayt = en
 | azmez n tuwwṭa = 020-01-30
-| akala n ufaylu = https://web.archive.org/web/20200120170442/https://www.who.int/westernpacific/health-topics/coronavirus | azmez n ufaylu = 20 yennayer 2020 }}</ref> igan d tamdint tameqrant tis 7 di Ccinwa s wazal n 11 n imelyan n imezdaɣ
+| akala n ufaylu = https://web.archive.org/web/20200120170442/https://www.who.int/westernpacific/health-topics/coronavirus | azmez n ufaylu = 20 yennayer 2020 }}</ref> igan d tamdint tameqrant tis 7 di Ccinwa s wazal n 11 n imelyan n imezdaɣ. Seg wass n [[23 yennayer]] yettwasengel ɣef tilin n ugar n 800 n [[igim|yigimen]]<ref>{{amnir n web/fsus
+| akala = https://twitter.com/Echinanews/status/1220507165737144320
+| azwel = #Update: 830 confirmed cases have been reported in 29 Chinese provincial regions, including 177 in serious condition and 25 deaths (24 from Hubei and 1 from Hebei) as of 12 pm Jan 23: China's National Health Commission. #nCoV2019 #pneumoniapic.twitter.com/hlEJcv0k8V
+| azmez = falseT4:42 
+| tansa = @Echinanews
+| tutlayt = en
+| azmez n tuwwṭa = 2020-01-30
+| aneggar = 中国新闻网
+| amezwar = China News
+| Akala n ufaylu = https://web.archive.org/web/20200125175320/https://twitter.com/Echinanews/status/1220507165737144320 | azmez n ufaylu = 25 يناير 2020 }}</ref> seg tegnatin n yigim s uvirus n 2019 nCoV deg weswir amadlan, gar-asen igimen deg 20 n tamiwin d kra n tmura d iɣiren
+Amaṭun amezwar yettwasleɣt fell-as banen-d fellas iskanen deg wass n 8 dujamber,<ref>{{amnir n web/fsus
+| akala = http://www.cidrap.umn.edu/news-perspective/2020/01/report-thailands-coronavirus-patient-didnt-visit-outbreak-market
+| azwel = Report: Thailand's coronavirus patient didn't visit outbreak market
+| tansa = CIDRAP
+| tutlayt = en
+| Azmez n tuwwṭa = 2020-01-30
+| aneggar = Jan 14
+| amezwar = Lisa Schnirring {{!}} News Editor {{!}} CIDRAP News {{!}}
+| aneggar2 = 2020
+| Akala n ufaylu = https://web.archive.org/web/20200130010746/http://www.cidrap.umn.edu/news-perspective/2020/01/report-thailands-coronavirus-patient-didnt-visit-outbreak-market | azmez n ufaylu = 30 yennayer 2020 }}</ref>. Sin akin iban-d d akken-it d Bab n yiwen n tzaɣa (tḥanut) deg [[Alzuz n Wuhan i yimeččiyen iwlalen|ulzuz n Wuhan South China i yiselman]], ayen yeǧǧan ad medlen alzuz nni ass n  [[1 yennayer]].<ref name=":6">{{amnir n web/fsus
+| akala = https://systems.jhu.edu/research/public-health/ncov/
+| azwel = ncov – CSSE
+| tansa = systems.jhu.edu
+| azmez n tuwwṭa = 2020-01-30
+| Akala n ufaylu = https://web.archive.org/web/20200130104530/https://systems.jhu.edu/research/public-health/ncov/ | azmez n ufaylu = 30 yennayer 2020 }}</ref>
 
 == Tawessna ==
 
