--- a/Arwas_n_waṭṭan_n_Kuṛunavirus_2019-20.mw
+++ b/Arwas_n_waṭṭan_n_Kuṛunavirus_2019-20.mw
@@ -163,7 +163,15 @@ Amaṭun amezwar yettwasleɣt fell-as banen-d fellas iskanen deg wass n 8 dujamb
 | azwel = ncov – CSSE
 | tansa = systems.jhu.edu
 | azmez n tuwwṭa = 2020-01-30
-| Akala n ufaylu = https://web.archive.org/web/20200130104530/https://systems.jhu.edu/research/public-health/ncov/ | azmez n ufaylu = 30 yennayer 2020 }}</ref>
+| Akala n ufaylu = https://web.archive.org/web/20200130104530/https://systems.jhu.edu/research/public-health/ncov/ | azmez n ufaylu = 30 yennayer 2020 }}</ref> 
+Tettwakez-d [[talmest|telmest]] n uvirus yellan d asrag (d ssebba) g usefruret waṭṭan s tazzla d akken-it [[Kuṛunavirus]] d amaynu.<ref>{{amnir n web/fsus
+| akala = https://www.who.int/china/news/detail/09-01-2020-who-statement-regarding-cluster-of-pneumonia-cases-in-wuhan-china
+| azwel = WHO Statement Regarding Cluster of Pneumonia Cases in Wuhan, China
+| tansa = www.who.int
+| tutlayt = en
+| azmez n tuwwṭa = 2020-01-30
+| Akala n ufaylu = https://web.archive.org/web/20200130010747/https://www.who.int/china/news/detail/09-01-2020-who-statement-regarding-cluster-of-pneumonia-cases-in-wuhan-china | azmez n ufaylu = 30 yennayer 2020 }}</ref> di [[10 yennayer]]. Seld n tukza n ulkem n ijinumen yettwafk-d yisem n 2019-nCoV igan d BetaKorunavirus, yeqqen ar uvirus n [[tamsedfart tamesguneft n usamer alemmas]] (MERS-CoV) d uvirus n  [[Tamsedfart tamesguneft tamekruzt tanamsadt|tamsedfart n wazzug anamsad n turin]] (SARSCoV). Dɣa isig n tmekkist d uɣanib n wenṭaṭ n 2019-nCoV 
+d win Ur nettwassen ara s talɣa tummidt, Maca yezmer ad yili yemgarad ɣef ivirusen n Kuṛuna n iden.<ref name=":6" />
 
 == Tawessna ==
 
