*Empty MediaWiki Message*

--- a/Arwas_n_waṭṭan_n_Kuṛunavirus_2019-20.mw
+++ b/Arwas_n_waṭṭan_n_Kuṛunavirus_2019-20.mw
@@ -133,7 +133,7 @@ Timiqwa yessawaṭen [[Kuṛunavirus]] tt-ɣamayen-t ugglent (ttwaɛelqen-t) deg
 === Asefruret ===
 [[Tugna:COVID-19_cases_in_China.svg|thumb|280px|Tagertilt tesskanay-d timdinin n Ccinwa anda tenfufed deg-sent tignatin timezwura n urwas n Covid-19 di yennayer 2020]]
 
-Deg wass n [[31 dujamber]] [[2019]] tamurt n [[Ccinwa]] telɣet [[tuddsa tamadlant n tdawsa]] ɣef usefruret n wazzag n turin ur yettwassen ara yettwasnirem di temdint n [[Wuhan]]<ref>{{amnir n web/fsus
+Deg wass n [[31 dujamber]] [[2019]] tamurt n [[Ccinwa]] telɣet [[tuddsa tamadlant n tdawsa]] ɣef usefruret n wazzug n turin ur yettwassen ara, yettwasnirem di temdint n [[Wuhan]]<ref>{{amnir n web/fsus
 | akala = https://www.who.int/westernpacific/health-topics/coronavirus
 | azwel = Coronavirus
 | tansa = www.who.int
@@ -148,8 +148,8 @@ Deg wass n [[31 dujamber]] [[2019]] tamurt n [[Ccinwa]] telɣet [[tuddsa tamadla
 | azmez n tuwwṭa = 2020-01-30
 | aneggar = 中国新闻网
 | amezwar = China News
-| Akala n ufaylu = https://web.archive.org/web/20200125175320/https://twitter.com/Echinanews/status/1220507165737144320 | azmez n ufaylu = 25 يناير 2020 }}</ref> seg tegnatin n yigim s uvirus n 2019 nCoV deg weswir amadlan, gar-asen igimen deg 20 n tamiwin d kra n tmura d iɣiren
-Amaṭun amezwar yettwasleɣt fell-as banen-d fellas iskanen deg wass n 8 dujamber,<ref>{{amnir n web/fsus
+| Akala n ufaylu = https://web.archive.org/web/20200125175320/https://twitter.com/Echinanews/status/1220507165737144320 | azmez n ufaylu = 25 yennayer 2020 }}</ref> seg tegnatin n yigim s uvirus n 2019 nCoV deg weswir amadlan, gar-asen igimen deg 20 n tamiwin d kra n tmura d iɣiren,
+Amaṭun amezwar i yettwasleɣt fell-as banen-d fellas iskanen deg wass n 8 dujamber,<ref>{{amnir n web/fsus
 | akala = http://www.cidrap.umn.edu/news-perspective/2020/01/report-thailands-coronavirus-patient-didnt-visit-outbreak-market
 | azwel = Report: Thailand's coronavirus patient didn't visit outbreak market
 | tansa = CIDRAP
@@ -158,13 +158,13 @@ Amaṭun amezwar yettwasleɣt fell-as banen-d fellas iskanen deg wass n 8 dujamb
 | aneggar = Jan 14
 | amezwar = Lisa Schnirring {{!}} News Editor {{!}} CIDRAP News {{!}}
 | aneggar2 = 2020
-| Akala n ufaylu = https://web.archive.org/web/20200130010746/http://www.cidrap.umn.edu/news-perspective/2020/01/report-thailands-coronavirus-patient-didnt-visit-outbreak-market | azmez n ufaylu = 30 yennayer 2020 }}</ref>. Sin akin iban-d d akken-it d Bab n yiwen n tzaɣa (tḥanut) deg [[Alzuz n Wuhan i yimeččiyen iwlalen|ulzuz n Wuhan South China i yiselman]], ayen yeǧǧan ad medlen alzuz nni ass n  [[1 yennayer]].<ref name=":6">{{amnir n web/fsus
+| Akala n ufaylu = https://web.archive.org/web/20200130010746/http://www.cidrap.umn.edu/news-perspective/2020/01/report-thailands-coronavirus-patient-didnt-visit-outbreak-market | azmez n ufaylu = 30 yennayer 2020 }}</ref>. Sin akin iban-d d akken-it d bab n yiwet n tzaɣa (tḥanut) deg [[Alzuz n Wuhan i yimeččiyen iwlalen|ulzuz n '''Wuhan South China''' i yiselman]], ayen yeǧǧan ad medlen alzuz-nni ass n  [[1 yennayer]].<ref name=":6">{{amnir n web/fsus
 | akala = https://systems.jhu.edu/research/public-health/ncov/
 | azwel = ncov – CSSE
 | tansa = systems.jhu.edu
 | azmez n tuwwṭa = 2020-01-30
 | Akala n ufaylu = https://web.archive.org/web/20200130104530/https://systems.jhu.edu/research/public-health/ncov/ | azmez n ufaylu = 30 yennayer 2020 }}</ref> 
-Tettwakez-d [[talmest|telmest]] n uvirus yellan d asrag (d ssebba) g usefruret waṭṭan s tazzla d akken-it [[Kuṛunavirus]] d amaynu.<ref>{{amnir n web/fsus
+Tettwakez-d [[talmest|telmest]] n uvirus yellan d asrag (d ssebba) g usefruret waṭṭan-a s tazzla d akken-it d [[Kuṛunavirus]] amaynu.<ref>{{amnir n web/fsus
 | akala = https://www.who.int/china/news/detail/09-01-2020-who-statement-regarding-cluster-of-pneumonia-cases-in-wuhan-china
 | azwel = WHO Statement Regarding Cluster of Pneumonia Cases in Wuhan, China
 | tansa = www.who.int
