*Empty MediaWiki Message*

--- a/Azarza.mw
+++ b/Azarza.mw
@@ -1,4 +1,19 @@
 '''Azarza''' neɣ '''Buqemqum''' d [[aṭṭan averusan]] [[aṭṭan amanṭaṭ|yettenṭaṭen]] yekkat [[aglim]] d [[tazɣa|tezɣa]] d wadis n yimi akken id igellu s [[tuččit]] d wekmaz akken i yezmer ad iglu s [[taglal]] seld n mraw (10) n wussan seg wass mi id yebda waṭṭan
 
 == Wid yettwaggzen s uzarza ==
-Arrac imeẓyanen s umata d wid iy mekken (iy tt-ḥuza) waṭṭan-a s tuget. Akken iy mekken daɣen imeqqranen ur nli ara (ur nesɛi ara) [[affal]] igedṛen
+Arrac imeẓyanen s umata d wid iy mekken (iy tt-ḥuza) waṭṭan-a s tuget. Akken iy mekken daɣen imeqqranen ur nli ara (ur nesɛi ara) [[affal]] igedṛen neɣ wid itessen [[asafar (tasnujya)|isafaren]] inemgalen n waffal. Ma d [[igim]] yettili-d s tuṭṭsa (anali) n tiqqayin id yettilin deg weglim n umaṭun
+
+Mi ara ad yejji umaṭun seg waṭṭan-a ad yell (ad yekseb) [[affal]] anda Ur yettales ara (ur yettɛawad ara) ad tyaɣ i tikkelt n iden
+
+== Tawessna ==
+
+== Iskanen d izmal ==
+
+== D acu i yessefk af imawlan ad txedmen i weqcic yudnen ==
+
+== Tiwlafin ==
+
+== Ẓeṛ daɣen ==
+
+[[Taggayt:Tignatin n weglim yeqqnen ar ivirusen]]
+[[Taggayt:aṭṭanen]]
