--- a/Pablo_Picasso.mw
+++ b/Pablo_Picasso.mw
@@ -1,7 +1,7 @@
 {{infobox biography}}
 [[File:Plaatsen Guernica van Picasso in Stedelijk Museum, Bestanddeelnr 907-8865.jpg|thumb|right|Guernica]]
 
-'''Pablo Ruiz Picasso''', d anaẓur n Taklut Aspanyuli. Ilul di tɣiwant n [[Malaga]] di tmurt n [[Spanya]] ass n [[25 tuber]] [[1881]], immut ass n [[8 yebrir]] [[1973]] di [[Mugins]] di [[Fransa]].
+'''Pablo Picasso''' (s [[tutlayt Taspenyult|Tespenyult]]: '''Pablo Ruiz Picasso'''), ilul di temdint n [[Malaga]] ([[Spanya]]) ass n [[25 tuber]] [[1881]], immut ass n [[8 yebrir]] [[1973]] di [[Mugins]] ([[Fransa]]) d [[imsuneɣ]], d [[Tasreɣta|asreɣɣat]] yakk d [[tiẓuriyin timeẓliyin|anaẓur imeẓri]] [[Spanya|Aspenyul]] <ref>{{amnir n web|akala=http://www.moma.org/collection/browse_results.php?criteria=O%3ATA%3AE%3Aex4620&page_number=3&template_id=1&sort_order=1 |azwel=''The Guitar,'' MoMA |anefsar=Moma.org |azmez= |azmez n tuwwṭa=3 February 2012| akala n ufaylu = https://web.archive.org/web/20150116111301/http://www.moma.org/collection/browse_results.php?criteria=O:TA:E:ex4620&page_number=3&template_id=1&sort_order=1 | azmez n ufaylu = 16 yennayer 2015 }}</ref><ref>{{amnir n web|akala=http://www.tate.org.uk/collections/glossary/definition.jsp?entryId=267 |azwel=Sculpture, Tate |anefsar=Tate.org.uk |azmez= |azmez n tuwwṭa=3 February 2012| akala afaylu = https://web.archive.org/web/20120203110502/http://www.tate.org.uk/collections/glossary/definition.jsp?entryId=267 | azmez n ufaylu = 3 fuṛaṛ 2012 }}</ref>
 
 == Kra idlisen af tudert n Pablo Picasso ==
 * Léo Steinberg, ''Trois études sur Picasso'', coll. Arts et Esthétiques n° 9, Editions Carré, 1996 
