*Empty MediaWiki Message*

--- a/Tigzirt_n_Ugafa.mw
+++ b/Tigzirt_n_Ugafa.mw
@@ -1,4 +1,5 @@
 {{Databox}}
-'''Tigzirt n Ugafa''' (s [[tanglizit]]: ''North Island''), d yiwet seg snat-nni n tegzirin timeqranin n [[Ziland Tamaynut]]. Tajumma-nnes 113.729 km2 (yikilumitren imkuẓen). Zedɣen-tt 3.328.700 n yimezdaɣen. Deg tegzirt-a ay d-tezga [[Wellington]], tamaneɣt n tmurt.
+'''Tigzirt n ugafa''' (s [[tanglizit]]: ''North Island''), d yiwet seg snat-nni n tegzirin timeqranin n [[Ziland Tamaynut]]. Tajumma-ynes 113.729 km2 (yikilumitren imkuẓen). Zedɣen-tt 3.328.700 n imezdaɣ. Deg tegzirt-a ay d-tezga [[Wellington]] igan d [[tamenrut]] (tamaneɣt) n tmurt.
+
 
 [[Category:Tarakalt]][[Category:Tigzirin]]
