*Empty MediaWiki Message*

--- a/Arwas.mw
+++ b/Arwas.mw
@@ -1,6 +1,9 @@
+[[Tugna:1918FluVictimsStLouis.jpg|thumb|250px|[[Tussit Taspenyulit|Arwas n tussit n 1918]] d win id iglan s waṭas teɣtas deg umadal]]
+
+
 '''Arwas''' (Asget: '''irwasen''') neɣ '''Taẓimdalt''' (Asget: '''Tiẓimdalin''') d [[tasakrart]] yettenfufuden gar n yimdanen s tazzla meqqren deg tjumma meqqren am [[amenẓaw|umenẓaw]] akken iy zmer ad yemken ad yenfufed ar umadal yakk. [[Tasakrart]] tamezzaɣt yettenfufuden s tazzla maca amdan n imuṭan yudnen s yis yettwassen Ur yettwameggez ara d arwas, ɣef wanect-a yettwasinef (yettwasṭixxer) ɣef [[arwas n tussit|tẓimdalt n tussit]] d [[tasemhuyt n tussit|tussiyin d tsemhuyin yettalsen]] 
 
-Seg teɣzi n umezruy, aṭas n irwasen id ibanen am [[tazarzayt|tzerzayt]] d [[aṭṭan usdid|waṭṭan usdid]], maca [[tarka taberkant]] tga d yiwet gar tẓimdalin timsullsin (qessiḥen) yakk anda yenɣa ugar n 20 n imelyan n yemdanen deg useggas n [[1350]], seg tẓimdalin neɣ irwasen imaynuten yettwassnen yella [[avirus n udersaffal anefgan|avirus n udersaffal anefgan]], [[Tussit Taspenyulit]], [[Arwas n tussit A (H1N1) n 2009]], [[Avirus n tussit A (H1N1)]] d [[Arwas n waṭṭan n Kuṛunavirus 2019-20|werwas n waṭṭan n Kuṛunavirus 2019-20]] ('''[[Covid-19]]''') 
+Seg teɣzi n umezruy, aṭas n irwasen id ibanen am [[tazarzayt|tzerzayt]] d [[aṭṭan usdid|waṭṭan usdid]], maca [[tarka taberkant]] tga d yiwet gar tẓimdalin timsullsin (qessiḥen) yakk anda yenɣa ugar n 20 n imelyan n yemdanen deg useggas n [[1350]], seg tẓimdalin neɣ irwasen imaynuten yettwassnen yella [[avirus n udersaffal anefgan|avirus n udersaffal anefgan]], [[Tussit Taspenyulit]], [[Arwas n tussit A (H1N1) n 2009]], [[Avirus n tussit A (H1N1)]] d [[Arwas n waṭṭan n Kuṛunavirus 2019-20|werwas n waṭṭan n Kuṛunavirus 2019-20]] ('''[[Covid-19]]''')
 
 == Asenmel d talliyin == 
 
