--- a/Arwas.mw
+++ b/Arwas.mw
@@ -19,4 +19,4 @@ Seg teɣzi n umezruy, aṭas n irwasen id ibanen am [[tazarzayt|tzerzayt]] d [[a
 [[Taggayt:irwasen]]
 [[Taggayt:imihiyen isnudranen]]
 [[Taggayt:uguren idamsanen]]
-[[Taggayt:uguren n yimal]]
+[[Taggayt:uguren n imal]]
