*Empty MediaWiki Message*

--- a/Igem.mw
+++ b/Igem.mw
@@ -1,1 +1,26 @@
 '''Igim''' neɣ '''Awexxem''' d assehres (asteɛmer) n [[amuddir|umuddir]] amesnubgay sɣur umuddir [[tijjenṭedt|d ajenṭad]] abeṛṛani iswi-ynes d asexdem n iferdisen n umuddir amesnubgay i wakken ad yennerni (ujenṭad) d nnig n umuddir amesnubgay.<ref>[http://medical-dictionary.thefreedictionary.com/infection Definition of "infection" from several medical dictionaries] - Retrieved on 2012-04-03 {{Webarchive|url=https://web.archive.org/web/20180719174225/https://medical-dictionary.thefreedictionary.com/infection |date=19 yulyu 2018}}</ref> am yinig n [[Tabiktirt|tbiktirin]] d [[avirus|Ivirusen]] ar izeṭṭa n [[tafekka|tfekka]] sin akin ad nfufden deg-s
+
+
+== Asismel ==
+Igim neɣ awexxem yettwasismel s unect (ɛla ḥsab) n isragen d iskanen n [[aṭṭan|waṭṭan]] acku yezmer ad yili iremmed (iqeddec) yerna yettbin-d neɣ ad yili war iskanen yerna ur d-ittbin ara
+
+
+=== Igim asnawan ===
+D igim id yettilin ass-mara ad yettwasuji waṭṭan neɣ seld n usuji 
+
+===Iskanen d yizmal===
+
+
+===Assehres===
+
+===Aṭṭan====
+
+
+== [[Tawessna]] ==
+
+== Taggaẓt ==
+
+== Ẓeṛ daɣen ==
+
+[[Taggayt:aṭṭanen imanṭaṭen]]
+[[Taggayt:Timsakrarin]]
