*Empty MediaWiki Message*

--- a/Igem.mw
+++ b/Igem.mw
@@ -13,8 +13,7 @@ D igim id yettilin ass-mara ad yettwasuji waṭṭan neɣ seld n usuji
 
 ===Assehres===
 
-===Aṭṭan====
-
+===Aṭṭan===
 
 == [[Tawessna]] ==
 
